wrapper with overflow: hidden; and some little fixes

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 html,
 body {
   height: 100%;
   min-width: 1250px;
-  margin: 0;
-  padding: 0;
   font-family: "Titillium Web";
 }
 
@@ -46,6 +49,7 @@ a {
 
 .wrapper {
   min-height: 100%;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
 }
